@@ -1,6 +1,6 @@
-<dl><dt><strong><a href=\"$(URL)\">$(TITLE)</a></strong>$(STARSLEFT)
+<dl><dt><strong><a href="$(URL)">$(TITLE)</a></strong>$(STARSLEFT)
 </dt><dd>$(EXCERPT)<br>
-<i><a href=\"$(URL)\">$(URL)</a></i>
+<i><a href="$(URL)">$(URL)</a></i>
 <font size=-1>$(MODIFIED), $(SIZE) bytes</font>
 </dd></dl>
 
