@@ -1,1 +1,1 @@
-$(STARSRIGHT) <strong><a href=\"$(URL)\">$(TITLE)</a></strong><br>
+$(STARSRIGHT) <strong><a href="$(URL)">$(TITLE)</a></strong><br>
